# annix

./: .gitignore  .metadata  CONTRIBUTING.md  README.md  analysis_options.yaml  build.sh  firebase.json  flutter_rust_bridge.yaml  pubspec.yaml
.github/workflows/: build.yml  canary.yml  release.yml
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle  google-services.json
annix/: .flutter_rust_bridge.yml  Cargo.toml  build.rs
annix/annix-native.xcodeproj/: project.pbxproj
annix/annix-native.xcodeproj/xcuserdata/yesterday17.xcuserdatad/xcschemes/: xcschememanagement.plist
annix/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  lib.rs  network.rs
annix/src/network/: generated.io.rs  generated.rs
annix/src/player/: mod.rs  player.rs
annix/src/preferences/: api.rs  generated.io.rs  generated.rs
annix/src/repo/: api.rs  generated.io.rs  generated.rs
annix/src/store/: api.rs  generated.io.rs  generated.rs  mod.rs
annix/src/utils/: dummy.rs
docs/: metadata.md
drift_schemas/: drift_schema_v1.json  drift_schema_v2.json
ios/: ExportOptions.plist  Podfile
ios/Runner/: AppDelegate.swift  GoogleService-Info.plist  Info-Debug.plist  Info-Profile.plist  Info-Release.plist  Info.plist  Runner-Bridging-Header.h  bridge_generated.h  generated_preferences.h  generated_repo.h  generated_store.h
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  bridge_generated.dart  ffi.dart  firebase_options.dart  global.dart  main.dart  providers.dart  providers.g.dart  router.dart
lib/bridge/: bridge.dart  bridge_definitions.dart  bridge_generated.dart  definitions.dart  generated.dart  generated_network.dart  generated_preferences.dart  generated_repo.dart  generated_store.dart  native.dart
lib/controllers/: annil_controller.dart  anniv_controller.dart  initialize_controller.dart  network_controller.dart  offline_controller.dart  player_controller.dart  playing_controller.dart  playlist_controller.dart  settings_controller.dart
lib/i18n/: i18n.dart  i18n_en_US.dart  i18n_zh_CN.dart  strings.g.dart  strings.i18n.json  strings_en.g.dart  strings_zh-CN.i18n.json  strings_zh_CN.g.dart
lib/lyric/: lyric_provider.dart  lyric_provider_anniv.dart  lyric_provider_netease.dart  lyric_provider_petitlyrics.dart
lib/metadata/: metadata.dart  metadata_source.dart  metadata_source_anniv.dart  metadata_source_sqlite.dart
lib/metadata/sources/: file.dart  git.dart
lib/models/: anniv.dart  anniv.g.dart  metadata.dart  metadata.g.dart  playlist.dart  song.dart
lib/native/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  lib.dart
lib/native/api/: logging.dart  network.dart  player.dart  simple.dart
lib/pages/: album_detail.dart  album_info.dart  album_list.dart  home.dart  home_desktop.dart  keepalive.dart  login.dart  playing.dart  playlist.dart  playlist_detail.dart  root.dart  search.dart  settings.dart  setup.dart  tag.dart
lib/pages/desktop/: desktop_bottom_player.dart  main_desktop.dart  playing_desktop.dart
lib/pages/playing/: playing.dart  playing_control.dart  playing_desktop.dart  playing_lyric.dart  playing_mobile.dart  playing_queue.dart  queue.dart
lib/pages/playlist/: playlist.dart  playlist_album.dart  playlist_favorite.dart  playlist_list.dart
lib/pages/root/: albums.dart  base.dart  (+6 more)
lib/services/: annil.dart  anniv.dart  annix.dart  audio.dart  audio_handler.dart  audio_source.dart  cover.dart  font.dart  global.dart  logger.dart  network.dart  path.dart  platform.dart  player.dart  proxy.dart  repo.dart  route.dart  settings.dart  settings_controller.dart  theme.dart  window.dart
lib/utils/: anni_weslide_controller.dart  bytes.dart  context_extension.dart  cookie_storage.dart  debounce.dart  dio.dart  hash.dart  platform_icons.dart  redirect_interceptor.dart  share.dart  store.dart  theme.dart  theme.preset.anni.dart
lib/views/: home.dart  search.dart
lib/widgets/: album_grid.dart  artist_text.dart  bottom_playbar.dart  bottom_player.dart  cover_image.dart  desktop_bottom_player.dart  draggable_appbar.dart  drawer.dart  favorite_button.dart  icon_card.dart  loop_mode_button.dart  navigator.dart  platform_stepper.dart  play_pause_button.dart  playable_grid.dart  repeat_button.dart  simple_text_field.dart  square_icon_button.dart
linux/: CMakeLists.txt  my_application.cc  rust.cmake
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
macos/: Podfile
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: AppDelegate.swift  GoogleService-Info.plist  Info.plist  MainFlutterWindow.swift  bridge_generated.h  generated_network.h  generated_preferences.h  generated_repo.h  generated_store.h
macos/Runner.xcodeproj/: project.pbxproj
player/: Cargo.toml
player/src/: bridge_generated.rs
rust/: Cargo.toml
rust/src/: frb_generated.io.rs  frb_generated.rs  frb_generated.web.rs  lib.rs
rust/src/api/: logging.rs  mod.rs  network.rs  player.rs  simple.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_annix.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_annix.podspec
rust_builder/windows/: CMakeLists.txt
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt  rust.cmake
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+175 files in other folders)
