[package]
name = "annix-native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
flutter_rust_bridge = { version = "1.72.2", features = ["uuid"] }
once_cell = "1.17.1"
rusqlite = { version = "0.28.0", features = ["bundled"] }

anni-repo = { version = "0.3.2", features = ["db"] }
uuid = "1"

[build-dependencies]
flutter_rust_bridge_codegen = { version = "1.72.0", features = ["uuid"] }
