[package]
name = "annix-native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
flutter_rust_bridge = { version = "=1.82.6", features = ["uuid"] }
once_cell = "1.17.1"
rusqlite = { version = "0.28.0", features = ["bundled"] }

anni-repo = { version = "0.4.1", features = ["db"]}
uuid = "1"
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
anyhow = "1.0.75"
log = "0.4.20"

anni-playback = { git = "https://github.com/ProjectAnni/anni" }
cpal = { version = "0.15.2", features = ["oboe-shared-stdcxx"] }
rand = "0.8.5"

[build-dependencies]
flutter_rust_bridge_codegen = { version = "=1.82.6", features = ["uuid"] }
