[package]
name = "rust_lib_annix"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = { version = "=2.1.0", features = ["uuid"] }

once_cell = "1.17.1"
rusqlite = { version = "0.30.0", features = ["bundled"] }

anni-repo = { version = "0.4.2", features = ["db"] }
uuid = "1"
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
anyhow = "1.0.75"

anni-playback = { git = "https://github.com/ProjectAnni/anni", rev = "4de0f4e1de27b1e596f00cc18b3d6c60fbcf206b" }
cpal = { version = "0.15.3", features = ["oboe-shared-stdcxx"] }
rand = "0.8.5"
material-colors = { version = "0.3.3", features = ["image"] }

# TODO: upgrade version
tracing-subscriber-sqlite = { git = "https://github.com/ProjectAnni/tracing-subscriber-sqlite", features = [
    "tracing-log",
], rev = "42e79729fae0cb2803b8b9cebb01b039d30f0c9a" }
tracing = "0.1.40"
tracing-log = "0.2"

[patch.crates-io]
cpal = { git = "https://github.com/sidit77/cpal.git", branch = "master" }
