[package]
name = "rust_lib_annix"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = { version = "=2.1.0", features = ["uuid"] }

once_cell = "1.17.1"
rusqlite = { version = "0.30.0", features = ["bundled", "time"] }
time = "0.3.36"

anni-repo = { version = "0.4.2", features = ["db"] }
uuid = "1"
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
anyhow = "1.0.75"

anni-playback = { git = "https://github.com/ProjectAnni/anni", rev = "661fe1be2d6a04e114a421b0ac1ea84857d073ad" }
cpal = { version = "0.15.3", features = ["oboe-shared-stdcxx"] }
rand = "0.8.5"
material-colors = { version = "0.4.2", features = ["image"] }

# TODO: upgrade version
tracing-subscriber-sqlite = { git = "https://github.com/ProjectAnni/tracing-subscriber-sqlite", features = [
    "tracing-log",
], rev = "71cc7476dd6b711350665975a7a1b0181c8fd71c" }
tracing = "0.1.40"
tracing-log = "0.2"

[patch.crates-io]
cpal = { git = "https://github.com/sidit77/cpal.git", branch = "master" }
