[package]
name = "rust_lib_annix"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = { version = "=2.9.0", features = ["uuid"] }

once_cell = "1.17.1"
rusqlite = { version = "0.30.0", features = ["bundled", "time"] }
time = "0.3.36"

uuid = "1"
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
anyhow = "1.0.75"

anni-repo = { git = "https://github.com/ProjectAnni/anni", rev = "f39e1dd3673a2bbc411a714c722c49eacb395218", features = ["db"] }
anni-playback = { git = "https://github.com/ProjectAnni/anni", rev = "f39e1dd3673a2bbc411a714c722c49eacb395218" }
anni-metadata = { git = "https://github.com/ProjectAnni/anni", rev = "f39e1dd3673a2bbc411a714c722c49eacb395218" }
cpal = { version = "0.15.3", features = ["oboe-shared-stdcxx"] }
rand = "0.8.5"
material-colors = { version = "0.4.2", features = ["image"] }

# TODO: upgrade version
tracing-subscriber-sqlite = { git = "https://github.com/ProjectAnni/tracing-subscriber-sqlite", features = [
    "tracing-log",
], rev = "71cc7476dd6b711350665975a7a1b0181c8fd71c" }
tracing = "0.1.40"
tracing-log = "0.2"

[patch.crates-io]
cpal = { git = "https://github.com/sidit77/cpal.git", branch = "master" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
